@@ -19,8 +19,7 @@ my ($premature, @results) = run_tests(
 
         chdir 't/corpus';
 
-        require Test::Kwalitee;
-        Test::Kwalitee->import( tests => [ qw(has_changelog) ] );
+        Test::Kwalitee->import( tests => [ qw(has_changelog no_symlinks) ] );
     },
 );
 
@@ -34,6 +33,14 @@ cmp_deeply(
             actual_ok => 0,
             type => '',
             diag => re(qr/^Error: The distribution ...+\nRemedy: Add a/s),
+        }),
+        superhashof({
+            name => 'no_symlinks',
+            depth => 1,
+            ok => 1,
+            actual_ok => 1,
+            type => '',
+            diag => ignore,
         }),
     ],
     'test fails, with diagnosis',
