@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - do not stop running tests at the first failure (broken since 1.20)
 
 1.21      2014-08-16 00:12:37Z
     - document metrics added in Module::CPANTS::Analyse 0.93_03
